Warehouse Queue fully configured hopefully
